--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MoviesEx</string>
+    <string name="error_common_message">An error occurred</string>
 </resources>
