--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MoviesEx</string>
     <string name="error_common_message">An error occurred</string>
     <string name="loading_indicator">Loading...</string>
+    <string name="label_popular_movies">Popular Movies</string>
 </resources>
